
plugins {
    id 'java-library'
}

version = '1.0.0-SNAPSHOT'
group = 'org.m410.deathvalley'

sourceCompatibility = 10
defaultTasks 'build'
description 'Death Valley'

repositories {
    mavenCentral()
}

dependencies {
    compile('org.apache.commons:commons-lang3:3.7')
    compile('javax.validation:validation-api:2.0.1.Final')

    testCompile('javax.annotation:javax.annotation-api:1.3.2')
    testCompile('org.hibernate.common:hibernate-commons-annotations:5.0.4.Final')
    testCompile('org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final')
    testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
}

test {
    jvmArgs '--illegal-access=deny'
    useJUnitPlatform {
        excludeEngines 'junit-vintage'
    }
}
